--- a/bungeni_custom/trunk/translations/bungeni.ui/locales/fr/LC_MESSAGES/bungeni.ui.po
+++ b/bungeni_custom/trunk/translations/bungeni.ui/locales/fr/LC_MESSAGES/bungeni.ui.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Thu Mar 17 17:14:11 2011\n"
-"PO-Revision-Date: 2010-07-21 18:18+0300\n"
-"Last-Translator: Serge <serge@un.org>\n"
+"PO-Revision-Date: 2011-03-18 11:09+0300\n"
+"Last-Translator: Murithi <murithi@parliaments.info>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -1448,7 +1448,7 @@ msgstr ""
 
 #: src/bungeni.main/bungeni/ui/forms/files.py:140
 msgid "DOWNLOAD"
-msgstr ""
+msgstr "télécharger"
 
 #: src/bungeni.main/bungeni/ui/forms/files.py:17
 #: src/bungeni.main/bungeni/ui/forms/templates/version-attached-files.pt:1
@@ -1471,9 +1471,8 @@ msgid "delete"
 msgstr "supprimer"
 
 #: src/bungeni.main/bungeni/ui/forms/files.py:89
-#, fuzzy
 msgid "download"
-msgstr "télécharger le fichier pdf"
+msgstr "télécharger"
 
 #: src/bungeni.main/bungeni/ui/forms/forms.py:106
 msgid "Direction"
@@ -1814,9 +1813,8 @@ msgid "Audit Log"
 msgstr "journal d'audit"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1320
-#, fuzzy
 msgid "Download"
-msgstr "télécharger odt"
+msgstr "télécharger"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1335
 msgid "Respond"
