Commit from Bungeni: Pootle Localisation Portal by user ashok.: 522 of 616 messages translated (67 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni.ui/locales/en/LC_MESSAGES/bungeni.ui.po
+++ b/bungeni_custom/trunk/translations/bungeni.ui/locales/en/LC_MESSAGES/bungeni.ui.po
@@ -1860,9 +1860,9 @@ msgid "Audit Log"
 msgstr "audit log"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1346
-#, fuzzy
+#: src/bungeni.main/bungeni/ui/menu.zcml:1320
 msgid "Download"
-msgstr "download odt"
+msgstr "download"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1361
 msgid "Respond"
