Commit from Bungeni: Pootle Localisation Portal by user ashok.: 209 of 229 messages translated (17 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni.core/locales/en/LC_MESSAGES/bungeni.core.po
+++ b/bungeni_custom/trunk/translations/bungeni.core/locales/en/LC_MESSAGES/bungeni.core.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Fri Apr 15 14:54:07 2011\n"
-"PO-Revision-Date: 2010-07-20 19:47+0300\n"
+"PO-Revision-Date: 2011-04-15 15:30+0300\n"
 "Last-Translator: Administrator <admin@apkn.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -23,7 +23,6 @@ msgid "Committees"
 msgstr "committees"
 
 #: src/bungeni.main/bungeni/core/app.py:102
-#, fuzzy
 msgid "Committee schedules"
 msgstr "committees"
 
@@ -33,7 +32,6 @@ msgid "Sittings"
 msgstr "sittings"
 
 #: src/bungeni.main/bungeni/core/app.py:106
-#, fuzzy
 msgid "Plenary Sittings"
 msgstr "sittings"
 
@@ -180,23 +178,21 @@ msgstr "settings"
 
 #: src/bungeni.main/bungeni/core/app.py:286
 #: src/bungeni.main/bungeni/core/app.py:287
-#, fuzzy
 msgid "email settings"
-msgstr "settings"
+msgstr "email settings"
 
 #: src/bungeni.main/bungeni/core/app.py:292
 #: src/bungeni.main/bungeni/core/app.py:293
-#, fuzzy
 msgid "xapian settings"
-msgstr "settings"
+msgstr "xapian settings"
 
 #: src/bungeni.main/bungeni/core/app.py:322
 msgid "vocabularies"
-msgstr ""
+msgstr "vocabularies"
 
 #: src/bungeni.main/bungeni/core/app.py:323
 msgid "manage vocabularies"
-msgstr ""
+msgstr "manage vocabularies"
 
 #: src/bungeni.main/bungeni/core/app.py:84
 msgid "Workspace"
@@ -209,7 +205,6 @@ msgstr "current parliamentary activity"
 
 #: src/bungeni.main/bungeni/core/app.py:93
 #: src/bungeni.main/bungeni/core/app.py:94
-#, fuzzy
 msgid "Scheduling"
 msgstr "schedule"
 
@@ -218,7 +213,6 @@ msgid "Participation has no principal"
 msgstr ""
 
 #: src/bungeni.main/bungeni/core/dc.py:104
-#, fuzzy
 msgid "Approved on"
 msgstr "approved on"
 
@@ -231,14 +225,13 @@ msgid "notice given on"
 msgstr "notice given on"
 
 #: src/bungeni.main/bungeni/core/dc.py:166
-#, fuzzy
 msgid "Sitting:"
-msgstr "sittings"
+msgstr "sitting"
 
 #: src/bungeni.main/bungeni/core/dc.py:169
 #: src/bungeni.main/bungeni/core/dc.py:179
 msgid "to"
-msgstr ""
+msgstr "to"
 
 #: src/bungeni.main/bungeni/core/dc.py:176
 #, fuzzy
@@ -260,14 +253,12 @@ msgid "translation"
 msgstr "draft translation"
 
 #: src/bungeni.main/bungeni/core/dc.py:208
-#, fuzzy
 msgid "Version"
-msgstr "questions"
+msgstr "version"
 
 #: src/bungeni.main/bungeni/core/dc.py:212
-#, fuzzy
 msgid "Last modified"
-msgstr "last modified $date"
+msgstr "last modified"
 
 #: src/bungeni.main/bungeni/core/dc.py:353
 msgid "Discussion"
@@ -275,7 +266,7 @@ msgstr "discussion"
 
 #: src/bungeni.main/bungeni/core/dc.py:377
 msgid "Address"
-msgstr ""
+msgstr "address"
 
 #: src/bungeni.main/bungeni/core/dc.py:99
 #: src/bungeni.main/bungeni/core/dc.py:126
@@ -299,7 +290,6 @@ msgstr "html fragment to odt"
 
 #. Default: ""
 #: src/bungeni.main/bungeni/core/version.py:117
-#, fuzzy
 msgid "Reverted to previous version $version"
 msgstr "reverted to previous version $version"
 
@@ -392,9 +382,8 @@ msgstr "schedule first reading"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:136
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:52
-#, fuzzy
 msgid "Reschedule First Reading"
-msgstr "schedule first reading"
+msgstr "reschedule first reading"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:139
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:43
@@ -413,9 +402,8 @@ msgstr "schedule first report reading"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:148
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:61
-#, fuzzy
 msgid "Reschedule First Report Reading"
-msgstr "schedule first report reading"
+msgstr "reschedule first report reading"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:151
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:32
@@ -431,9 +419,8 @@ msgstr "schedule second reading"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:157
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:62
-#, fuzzy
 msgid "Reschedule Second Reading"
-msgstr "schedule second reading"
+msgstr "reschedule second reading"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:160
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:60
@@ -469,9 +456,8 @@ msgstr "schedule whole house committee"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:178
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:44
-#, fuzzy
 msgid "Reschedule Whole House Committee"
-msgstr "schedule whole house committee"
+msgstr "reschedule whole house committee"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:181
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:47
@@ -501,9 +487,8 @@ msgstr "schedule third reading"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:196
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:64
-#, fuzzy
 msgid "Reschedule Third Reading"
-msgstr "schedule third reading"
+msgstr "reschedule third reading"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:199
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:68
@@ -568,9 +553,8 @@ msgstr "draft minutes"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:286
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:202
-#, fuzzy
 msgid "Publish Minutes"
-msgstr "published minutes"
+msgstr "publish minutes"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:290
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:199
@@ -584,9 +568,8 @@ msgid "Publish"
 msgstr "publish"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:305
-#, fuzzy
 msgid "Reactivate"
-msgstr "deactivate"
+msgstr "reactivate"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:336
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:440
@@ -625,9 +608,8 @@ msgstr "adopt with amendments"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:375
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:169
-#, fuzzy
 msgid "Reject a scheduled motion"
-msgstr "schedule motion"
+msgstr "reject motion"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:449
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:104
@@ -662,9 +644,8 @@ msgstr "complete response"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:253
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:302
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:306
-#, fuzzy
 msgid "Submit"
-msgstr "submitted"
+msgstr "submit to the clerk"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:470
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:91
@@ -694,7 +675,6 @@ msgstr "receive"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:519
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:235
-#, fuzzy
 msgid "Needs Recomplete to Approve"
 msgstr "needs clarification"
 
@@ -710,7 +690,6 @@ msgstr "needs clarification"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:261
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:313
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:317
-#, fuzzy
 msgid "Require Clarification to Receive"
 msgstr "needs clarification"
 
